--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  margin:0px;
-  padding:0px;
+  margin: 0;
+  padding: 0;
   display: flex;
 }
 
@@ -22,6 +22,10 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 5px;
+}
+
+#layerMenu p {
+  cursor: pointer;
 }
 
 
@@ -66,12 +70,17 @@ body {
   margin: 15px 0;
 }
 .canvas {
+  display: inline-block;
   border: 1px solid black;
-  width: 100%;
+  width: 100% !important;
   height: 100vh
 }
 
 .canvas [resize] {
   width: 100%;
   height: 100%;
+}
+
+.disabled {
+  color: gray;
 }
